<resources>
    <string name="app_name">MyFypProject</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="nric">NRIC</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="search_existing_profile">Search</string>
    <string name="Add_profile">Add Profile</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="create_new">No Account? Create new</string>
    <string name="create_new_profile">No Profile? Create new</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_fullname">Full Name</string>
    <string name="PhoneNumber_label">Phone Number</string>
    <string name="FullName_label">Full Name</string>
    <string name="Gender_label">Gender</string>
    <string name="DOB_label">Date of birth</string>

    <string name="edit_profile">Edit</string>
    <string name="cancel_edit_profile">Cancel</string>
    <string name="save_edit_profile">Save</string>


    <string name="test_long_string">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electron</string>
    <string-array name="slots_array">
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Night</item>
    </string-array>
    <string-array name="relationship_array">
        <item>Self</item>
        <item>Mother</item>
        <item>Father</item>
        <item>GrandFather</item>
        <item>GrandMother</item>
    </string-array>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Appt_date">Date<font color='#FF0000'>*</font></string>
    <string name="appt_select_slot">Select Slot<font color='#FF0000'>*</font></string>
    <string name="appt_select_time">Select time<font color='#FF0000'>*</font></string>
    <string name="appt_select_service">Select service<font color='#FF0000'>*</font></string>
    <string name="default_notification_channel_id">default_channel_id</string>
</resources>