<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_view_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/login_layout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:visibility="gone"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      >
      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/Email_txtInput_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="96dp"
          android:layout_marginEnd="24dp"
          android:hint="@string/prompt_email"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/login_username_edt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/Password_txtInput_layout"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginEnd="24dp"
          app:passwordToggleEnabled="true"
          android:hint="@string/prompt_password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@id/Email_txtInput_layout"
          >

          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/login_password_edt"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              />

      </com.google.android.material.textfield.TextInputLayout>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/login_btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="24dp"
          android:layout_marginTop="16dp"
          android:layout_marginEnd="24dp"
          android:textColor="@android:color/white"
          android:text="@string/action_sign_in"
          android:textSize="16sp"
          android:background="@drawable/curve_button"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/Password_txtInput_layout"
          app:layout_constraintVertical_bias="0.2" />

      <TextView
          android:id="@+id/register_txt"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:gravity="center"
          android:text="@string/create_new"
          style="@style/TextColor"
          app:layout_constraintTop_toBottomOf="@+id/login_btn"
          android:textSize="16sp"/>

  </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/empty_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>