<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/edit_profile_constlayout"
    >
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_profile_scrollView"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="10dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_accEmail_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="24dp"
                android:hint="account"
                app:helperTextTextColor="@android:color/holo_red_dark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_accEmail_edt"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_nric_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:hint="@string/nric"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_accEmail_txtLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_nric_edt"
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusable="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_fullName_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                android:hint="@string/FullName_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_nric_txtLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_fullName_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_phoneNumber_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                android:hint="@string/PhoneNumber_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_fullName_txtLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_phoneNumber_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_gender_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                android:hint="@string/Gender_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_phoneNumber_txtLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_gender_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:focusable="false"
                    android:enabled="false"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_profile_dob_txtLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                app:helperText=""
                app:helperTextTextColor="@android:color/holo_red_dark"
                android:hint="@string/DOB_label"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_gender_txtLayout"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profile_dob_edt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:enabled="false"
                    android:focusable="false"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                app:layout_constraintTop_toBottomOf="@id/edit_profile_dob_txtLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="10dp"
                android:orientation="vertical"
                >
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/edit_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curve_button"
                    android:text="@string/edit_profile"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/cancel_edit_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_button"
                    android:text="@string/cancel_edit_profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="gone"
                    android:layout_marginBottom="10dp"
                    />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/save_edit_profile_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curve_button"
                    android:text="@string/save_edit_profile"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:visibility="gone"
                    />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>




</LinearLayout>